--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <link
       rel="icon"
-      href="https://cdn.glitch.global/9b1ada37-7e81-43b3-8c4f-54e5c9654f9e/ciliatesddefault.png?v=1724437086947"
+      href="thesis-assets/pavi.png"
     />
     <link rel="stylesheet" href="https://use.typekit.net/lsi4shu.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
   
    <style>
     body {
-      background-image: url("https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/cellular-bgor.png?v=1744905640763");
+      background-image: url("thesis-assets/background.png");
     }
   </style>
  
@@ -60,7 +60,7 @@ In my paintings, 3D rendered spaces, and code, I create scenes that host intrica
 <br><br>In recollection through memory, truth is refracted repeatedly and distorted further through each recollection. Memories are fictional reconstructions that inform our behavior in the present and our imaginings of the future. In a piece called the ‘Speculative-Time Complex’, author Suhail Malik remarks "The Speculative isn't just how the future makes the present. It's also that the present itself is a speculative relationship to a past that we have already exceeded” (Avanessian). Our imaginings of the future are based in warped recollections of the past. My works constellate collective human memories of the past, particularly ecologically-based folklore, and input the environment with a map of these stories. This mapping leans into the fact that preserving memories through archival in itself is an act of creation, as stories have an entirely new meaning in the present, when separated from their context in the past. 
 
            <br> <br>
-           <center>           <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/particles.png?v=1744926711239">
+           <center>           <img width="70%"  src="thesis-assets/particles.jpg">
 </center>
         <p>
            particles under observation
@@ -81,13 +81,13 @@ In my paintings, 3D rendered spaces, and code, I create scenes that host intrica
 In my creation myth 3D animation titled All the World an Island, I drew from research on exoplanets, paleontology, and creation in Genesis to fabricate a world where many geological timelines exist together in the same virtualized ecosystem. 
          <br><br>
           <center> 
-          <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/Ancient%20Near%20East%20Worldview.webp?v=1744844936287">
+          <img width="70%"  src="thesis-assets/genesis-diagram.png">
           </center>
            <p>
            world described in genesis
            </p>
            <center> 
-          <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/ugh-dp.png?v=1744843843640">
+          <img width="70%"  src="thesis-assets/dome.jpg">
           </center>
            <p>
            still of the architecture in <i>All the World an Island</i>
@@ -97,13 +97,13 @@ In my creation myth 3D animation titled All the World an Island, I drew from res
 Geomythology is the study of oral and written traditions explaining geological events, revealing pre-scientific human intuition surrounding natural phenomena (Burberry). In researching and building this world, I focused on the theory that fossils inspired creature-based mythologies; The gryphon, dragons, and serpents are all thought to be based on the fossilized remains of extinct organisms found by humans in the past. By 3D sculpting these creatures and their extinct counterparts and populating them in the same environment, their division dissolves.
           <br><br>
            <center> 
-          <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/everyonethere-dp.png?v=1744843845651">
+          <img width="70%"  src="thesis-assets/everyone.jpg">
           </center>
            <p>
           animation still of organisms of the island
            </p>
            <center> 
-          <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/hydro-dp.png?v=1744843847579">
+          <img width="70%"  src="thesis-assets/vent.jpg">
               <p>
            animation still of Sheol
            </p>
@@ -113,7 +113,7 @@ Geomythology is the study of oral and written traditions explaining geological e
 
           <br><br>
           <center> 
-          <img width="70%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/Screenshot%202025-04-16%20at%206.41.55%E2%80%AFPM.png?v=1744843713942">
+          <img width="70%"  src="hthesis-assets/worldome.jpg">
               <p>
            <i>water with neither bottom nor resting place</i>
            </p>
@@ -150,7 +150,7 @@ Geomythology is the study of oral and written traditions explaining geological e
           Derived from the concept of Evogeneao, the evolutionary Tree of Life on a geologic time scale, these islands and their organism inhabitants represent possible branching futures of a post-Anthropocentric world following a mass extinction.<br>
      <br>
          <center> 
-          <img width="80%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/tree-of-life_2000.png?v=1744843684482">
+          <img width="80%"  src="thesis-assets/evo-diagram.png">
               <p>
            Evogeneao map, Leonard Eisenberg, 2017
 
@@ -160,10 +160,8 @@ Geomythology is the study of oral and written traditions explaining geological e
           By using scientific research on evolutionary phenomena unique to island ecosystems, I've sculpted informed yet imagined creatures. I used GIS data of landscapes on Earth— Akaroa Island, Mauritius, the Aleutian Islands, and Isla Teresa Glacier— as the 3D base for the five islands, bringing real-world satellite data into this mythologized world. Evogeneao is devoted to the power of an ecosystem carved by time and the miraculous emergence of life under harsh conditions.
 <br><br>
           <center> 
-          <img width="80%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/evoooo.png?v=1744843748914">
-             <img width="80%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/evo-2.png?v=1744843756324">
-             <img width="80%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/evo-cap4.png?v=1744843758669">
-                         <img width="80%"  src="https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/evocap2.png?v=1744843752415">
+          <img width="90%"  src="thesis-assets/evogeneao.png">
+           
 
           </center>
            <p>
@@ -178,7 +176,7 @@ Geomythology is the study of oral and written traditions explaining geological e
             "The unreality of games gives notice that reality is not yet real. Unconsciously, they rehearse the right life.” (German theorist Theodore Adorno)
           </h4>
 <br>
-          <center> <img src="https://cdn.glitch.global/10f0843f-e6d3-4934-896c-005c2ffd0780/pixel-coela.png?v=1733174571082"></center>
+          <center> <img src="thesis-assets/banner-cili"></center>
           <br>
       </section>
  
