--- a/sources.html
+++ b/sources.html
@@ -11,7 +11,7 @@
    
     <link
       rel="icon"
-      href="https://cdn.glitch.global/9b1ada37-7e81-43b3-8c4f-54e5c9654f9e/ciliatesddefault.png?v=1724437086947"
+      href="thesis-assets/favi.png"
     />
     <link rel="stylesheet" href="https://use.typekit.net/lsi4shu.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
   
    <style>
     body {
-      background-image: url("https://cdn.glitch.global/a68cf52c-fd1a-4d0a-a253-94f814992b84/cellular-bgor.png?v=1744905640763");
+      background-image: url("thesis-assets/background.png");
     }
   </style>
  
