--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
    
     <link
       rel="icon"
-      href="thesis-assets/pavi.png"
+      href="thesis-assets/favi.png"
     />
     <link rel="stylesheet" href="https://use.typekit.net/lsi4shu.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -20,7 +20,7 @@
   
    <style>
     body {
-      background-image: url("thesis-assets/background.png");
+      background-image: url("thesis-assets/cellular.jpg");
     }
   </style>
  
