--- a/sources.html
+++ b/sources.html
@@ -20,7 +20,7 @@
   
    <style>
     body {
-      background-image: url("thesis-assets/background.png");
+      background-image: url("thesis-assets/cellular.jpg");
     }
   </style>
  
