--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ In my creation myth 3D animation titled All the World an Island, I drew from res
            world described in genesis
            </p>
            <center> 
-          <img width="70%"  src="thesis-assets/dome.jpg">
+          <img width="70%"  src="thesis-assets/worldome.jpg">
           </center>
            <p>
            still of the architecture in <i>All the World an Island</i>
