--- a/index.html
+++ b/index.html
@@ -176,7 +176,7 @@ Geomythology is the study of oral and written traditions explaining geological e
             "The unreality of games gives notice that reality is not yet real. Unconsciously, they rehearse the right life.” (German theorist Theodore Adorno)
           </h4>
 <br>
-          <center> <img src="thesis-assets/banner-cili"></center>
+          <center> <img src="thesis-assets/banner-cili.png"></center>
           <br>
       </section>
  
