--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ In my creation myth 3D animation titled All the World an Island, I drew from res
            world described in genesis
            </p>
            <center> 
-          <img width="70%"  src="thesis-assets/worldome.jpg">
+          <img width="70%"  src="thesis-assets/dome.jpg">
           </center>
            <p>
            still of the architecture in <i>All the World an Island</i>
@@ -113,7 +113,7 @@ Geomythology is the study of oral and written traditions explaining geological e
 
           <br><br>
           <center> 
-          <img width="70%"  src="hthesis-assets/worldome.jpg">
+          <img width="70%"  src="thesis-assets/worldome.jpg">
               <p>
            <i>water with neither bottom nor resting place</i>
            </p>
