--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@ Geomythology is the study of oral and written traditions explaining geological e
 
           <br><br>
           <center> 
-          <img width="70%"  src="thesis-assets/worldome.jpg">
+          <img width="70%"  src="thesis-assets/world-dome.jpg">
               <p>
            <i>water with neither bottom nor resting place</i>
            </p>
