--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
   
    <style>
     body {
-      background-image: url("thesis-assets/cellular.jpg");
+      background-image: url("thesis-assets/bg.BMP");
     }
   </style>
  
