--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
    <style>
     body {
       background-image: url("thesis-assets/bg.BMP");
+      background-size: 200px auto;
     }
   </style>
  
