--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>thesis</title>
+    <title>* evogeneao *</title>
     <link
       href="cyanobacteria.css"
       rel="stylesheet"
